# sudachi-life

./: .gitignore  .slice12-continuity.patch.gz.b64  .slice12-runtime.patch.gz.b64  AGENTS.md  README.md  pyproject.toml
.github/: slice10-continuity.patch.gz.b64  slice10-runtime.patch.gz.b64
.slice3-patch/: part-00.patch
docs/: AI_COLLABORATION_OPERATIONS.md  ARCHITECTURE.md  CHATGPT_PROJECT_HANDOFF.md  HANDOFF.md  HANDOFF_JA.md  IMPLEMENTATION_DISCIPLINE.md  MINIMAL_ORGANISM_CONTRACT.md  ORIGIN.md  ORIGIN_JA.md  PARENT_MODEL_PROVIDER_REVIEW.md  PHASE1_TEST_MATRIX.md  RESEARCH_QUESTIONS.md  ROADMAP.md
tests/: conftest.py  phase1_audit_helpers.py  test_action_failure_savepoint.py  test_authority_provenance.py  test_backward_wall_time_ordering.py  test_budget_exhaustion.py  test_checkpoint.py  test_checkpoint_retention.py  test_checkpoint_retention_failure.py  test_checkpoint_timeout.py  test_cleanup_grace.py  test_cli.py  test_clock.py  test_event_export.py  test_first_water_success.py  test_inbox.py  test_initialization.py  test_insertion_order_tie_breaking.py  test_maintenance_clear.py  test_maintenance_inspection.py  test_maintenance_threshold.py  test_nested_wake_rejection.py  test_no_applicable_action.py  test_no_external_workspace.py  test_objective_complete_boundary.py  test_pending_checkpoint_repair.py  test_pending_second_wake_rejection.py  test_phase1_audit_extra_trigger.py  test_phase1_audit_retention_and_storage.py  test_phase1_audit_schema_and_repair.py  test_phase1_audit_working_set.py  test_post_action_duplicate_replay.py  test_process_crash_rollback.py  (+14 more)
(+128 files in other folders)
